--- a/package.json
+++ b/package.json
@@ -15,15 +15,20 @@
     "express": "^4.17.1",
     "firebase": "^9.5.0",
     "graphql": "^16.0.1",
+    "history": "^5.1.0",
     "javascript-time-ago": "^2.3.10",
+    "js-time-ago": "^2.1.0",
+    "moment": "^2.29.1",
     "multer": "^1.4.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-time-ago": "^7.1.3",
     "react-timeago": "^6.2.1",
+    "timeago-react": "^3.0.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
