--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.5.5",
+    "@mui/material": "^5.2.2",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -22,6 +23,7 @@
     "multer": "^1.4.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
     "react-router-dom": "^6.0.2",
